--- a/Programmers square(CSS).html
+++ b/Programmers square(CSS).html
@@ -90,7 +90,7 @@
 	<td>Coming soon</td>
     </tr>
     <tr>
-	<td>Shantanu , Jugal , Hari</td>
+	<td>Shantanu , Abhinav</td>
 	<td>Content Writer</td>
 	<td>S3</td>
 	<td>Coming soon</td>
